--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^7.1.0",
+    "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
+    "sass-loader": "^10.1.0",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
